# adelanta

./: README.md  package-lock.json  package.json  tailwind.config.ts
backend/: package-lock.json  package.json
backend/src/: db.ts  index.ts  types.ts
contracts/: .gitignore  Cargo.toml  README.md  build.sh  deploy.sh
contracts/adelanta_invoice/: Cargo.toml
contracts/adelanta_invoice/src/: contract.rs  errors.rs  lib.rs  storage.rs  types.rs
contracts/adelanta_invoice/test_snapshots/contract/test/: test_full_invoice_lifecycle.1.json  test_preview_settlement.1.json
docs/: MERMAID_DIAGRAMS.md
src/: types.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/investor/: page.tsx
src/app/investor/invoices/[id]/: page.tsx
src/app/sme/: page.tsx
src/app/sme/invoices/[id]/: page.tsx
src/app/sme/invoices/new/: page.tsx
src/components/: Conversion.tsx  Features.tsx  Footer.tsx  Header.tsx  Hero.tsx  LanguageSelect.tsx  LocaleProvider.tsx  ProblemSolution.tsx  Proof.tsx  WalletButton.tsx  WalletProvider.tsx
src/components/ui/: Reveal.tsx
src/i18n/: translations.ts
src/lib/: api.ts  stellar.ts
